HIVE-29006: Iceberg: V3 support deletion vectors